--- a/src/styles/style/utilities/theme.scss
+++ b/src/styles/style/utilities/theme.scss
@@ -1,7 +1,7 @@
 @import 'variables';
 
 .light {
-	--theme-color: #{$color};
+	--theme-color: green;
 	--theme-page-background: #FFF;
 	--theme-page-text: #111;
 }
