--- a/src/styles/style/index.scss
+++ b/src/styles/style/index.scss
@@ -23,5 +23,18 @@ body {
 }
 
 .app {
+	min-height: 100vh;
 	background-color: var(--theme-text-backgroundcolor);
+
+	display: flex;
+	flex-direction: column;
 }
+
+main {
+	flex: 1 0 auto;
+}
+
+footer {
+	flex-shrink: 0;
+}
+
