improving variables and adding styles

--- a/src/styles/style/components/navbar.scss
+++ b/src/styles/style/components/navbar.scss
@@ -3,6 +3,8 @@
 .nav {
 	position: sticky;
 	top: 0;
+	z-index: 10;
+	background-color: var(--theme-text-backgroundcolor);
 
 	p, label {
 		margin: 0;
