--- a/src/styles/style/utilities/variables.scss
+++ b/src/styles/style/utilities/variables.scss
@@ -3,3 +3,10 @@ $light: #F4F4F4;
 $white: #fff;
 $secondary: #467302;
 $primary: #99BF0F;
+
+$radius: 15px;
+
+$default_spacing: 20px;
+$default_spacing2: $default_spacing*2;
+$default_spacing4: $default_spacing*4;
+$default_spacing8: $default_spacing*8;
